--- a/style.css
+++ b/style.css
@@ -1,49 +1,56 @@
 * {
-    box-sizing: border-box;
-  }
-    
-
-    body {
-    background-color: rgba(154, 160, 163, 0.404);
-    font: normal 1.25em 'Open Sans', sans-serif;
-    text-align: center
+  box-sizing: border-box;
 }
 
-    h1{
-    font-size: 1.5em;
-    color: #204264;;
-    text-decoration: underline;
+body {
+  background-color: rgba(154, 160, 163, 0.404);
+  font: normal 1.25em "Open Sans", sans-serif;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-    #btnCalcular {
-        background-color: rgb(225, 255, 255);
-        height: 32px ;
-        border-radius: 10px;
-        height: 3em;
-        padding: 10px;
-    }
+main {
+  background-color: antiquewhite;
+  padding: 30px;
+  text-align: center;
+  width: 45%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 1.2em;
+}
 
-    .var-text {
-        color: rgb(24, 124, 255);
-    }
+h1 {
+  font-size: 1.5em;
+  color: #204264;
+  text-decoration: underline;
+}
 
-    #labelC {
+#btnCalcular {
+  background-color: rgb(225, 255, 255);
+  height: 32px;
+  border-radius: 10px;
+  height: 3em;
+  padding: 10px;
+}
 
-        padding: 4px;
-        border-radius: 5px;
-    }
+.var-text {
+  color: rgb(24, 112, 228);
+}
 
-    #labelB {
-        padding: 4px;
-        border-radius: 5px;
-    }
+.labelEntrada {
+  padding: 4px;
+  border-radius: 5px;
+}
 
-    #labelA {
-
-        padding: 4px;
-        border-radius: 5px;
-    }
-
-
-
-
+.entrada {
+  width: 65%;
+  height: 35px;
+  border-radius: 17px;
+  border: 0.5px solid rgb(97, 90, 90);
+  padding-left: 15px;
+  color: rgb(102, 76, 76);
+  margin-bottom: 25px;
+}
